--- a/src/app/admin-site/containers/customers/customers.component.html
+++ b/src/app/admin-site/containers/customers/customers.component.html
@@ -8,7 +8,9 @@
       class="card">
       <mat-card-title>{{ customer.userName }}</mat-card-title>
       <mat-card-subtitle>{{ customer.email }}</mat-card-subtitle>
-      <mat-card-subtitle>{{ customer.gender }}</mat-card-subtitle>
+      <mat-card-subtitle>{{
+        customer.gender | capitalizeFirst
+      }}</mat-card-subtitle>
       <mat-card-content>
         <p>{{ customer.firstName }} {{ customer.lastName }}</p>
       </mat-card-content>
